 + str(score_dist[-1]) if len(score_dist)6 else }')        print(f'{ 22}  正确答案 score={cs}, 排名 #{cr}, 是最大值的 {pct}%')
  File "<string>", line 106
    print(f'{" "*22}  BM25 ·ÖĘý·Öēž: {score_dist[:6]}...{
                                                    ^
SyntaxError: '{' was never closed
